--- a/index.html
+++ b/index.html
@@ -29,5 +29,9 @@
             window.app = app;
         });
     </script>
+    <audio id="bgm" loop>
+        <source src="summer-upbeat-future-travel-pop-362161.mp3" type="audio/mpeg">
+        Your browser does not support the audio element.
+    </audio>
 </body>
 </html>
