--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         });
     </script>
     <audio id="bgm" loop>
-        <source src="summer-upbeat-future-travel-pop-362161.mp3" type="audio/mpeg">
+        <source src="bgm.mp3" type="audio/mpeg">
         Your browser does not support the audio element.
     </audio>
 </body>
